--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
       <label for='message' class='label-contact'>Message : </label>
       <textarea 
-        class='message-contact' 
-        name='message' 
-        id='message' 
-        cols='20' 
-        rows='10' 
-        placeholder='Merci de poser vos question ou donner vos commentaire'>
-      </textarea>
+        class='message-contact'
+        name='message'
+        id='message'
+        cols='20'
+        rows='10'
+        placeholder='Merci de poser vos question ou donner vos commentaire'
+      ></textarea>
 
       <label class='label-contact'>
         <input type="checkbox" />En cochant cette case, j'accepte de recevoir des informations sur les différentes offres disponibles.
